[gd_scene load_steps=3 format=3 uid="uid://7pvca2f5jde1"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_mwv13"]
[ext_resource type="Script" path="res://scenes/online_battle/lobby/create_room/create_room.gd" id="2_x3vca"]

[node name="CreateRoom" type="PanelContainer"]
theme = ExtResource("1_mwv13")
script = ExtResource("2_x3vca")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CreateRoomLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "@CREATE_ROOM"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RoomNameLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "@ROOM_NAME: "

[node name="RoomNameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "..."

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "@CREATE"
